[metadata]
name = obsidianhtml
version = 2.0.2
summary = Converts Obsidian notes into proper markdown and HTML
long_description = file: pypi_readme.md
home_page = https://github.com/obsidian-html/obsidian-html
author = https://github.com/dwrolvink
author_yemail = dwrolvink@protonmail.com
license = GNU General Public License v3 or later (GPLv3+)

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

keywords = html, markdown, notes, markdown-to-html, note-taking, obsidian, html-css-javascript, notes-app, obsidian-md, obsidian-html, obsidianmd, obsidian-notes 

[options]
packages = obsidianhtml
install_requires =
    markdown
    obsidianhtml-md-mermaid-fork
    python-frontmatter
    pygments
    regex
    requests
    beautifulsoup4
    html5lib
include_package_data = True
python_requires = >=3.9

[options.package_data]
* = *.md, LICENSE

[options.entry_points]
console_scripts =
    obsidianhtml = obsidianhtml:main