[metadata]
name = obsidianhtml
version = 4.0.0-alpha
summary = Converts Obsidian notes into proper markdown and HTML
long_description = file: pypi_readme.md
home_page = https://github.com/obsidian-html/obsidian-html
author = https://github.com/dwrolvink
author_email = dwrolvink@protonmail.com
license = GNU General Public License v3 or later (GPLv3+)

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

keywords = html, markdown, notes, markdown-to-html, note-taking, obsidian, html-css-javascript, notes-app, obsidian-md, obsidian-html, obsidianmd, obsidian-notes 

[options]
packages = find:
install_requires =
    markdown >= 3.4.1
    pymdown-extensions
    python-frontmatter
    pygments
    regex
    requests
    beautifulsoup4
    html5lib
    pywebview
    appdirs
    lxml
    whoosh
include_package_data = True
python_requires = >=3.9

[options.package_data]
* = *.md, LICENSE

[options.entry_points]
console_scripts =
    obsidianhtml = obsidianhtml:main
    obsidianhtml.sub = obsidianhtml.markdown_extensions:main
markdown.extensions = 
   callout = obsidianhtml.markdown_extensions.CallOutExtension:CallOutExtension
   dataview = obsidianhtml.markdown_extensions.DataviewExtension:DataviewExtension
   mermaid = obsidianhtml.markdown_extensions.MermaidExtension:MermaidExtension
   obs_toc = obsidianhtml.markdown_extensions.CustomTocExtension:CustomTocExtension
   eraser = obsidianhtml.markdown_extensions.EraserExtension:EraserExtension
   obs_footnote = obsidianhtml.markdown_extensions.FootnoteExtension:FootnoteExtension
   obs_formatting = obsidianhtml.markdown_extensions.FormattingExtension:FormattingExtension
   embedded_search = obsidianhtml.markdown_extensions.EmbeddedSearchExtension:EmbeddedSearchExtension
   code_wrapper = obsidianhtml.markdown_extensions.CodeWrapperExtension:CodeWrapperExtension
   admonition2 = obsidianhtml.markdown_extensions.AdmonitionExtension:AdmonitionExtension
   custom_tables = obsidianhtml.markdown_extensions.CustomTableExtension:CustomTableExtension